declaring variable (const) link to dom

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="picture"><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png" alt="Charmander"></div>
                     <div class="name">Charmander</div>
                     <div class="id">001</div>
-                    <div class="pokemoninfo">
+                    <div class="pokemon-info">
                         Bla bla bla
                     </div>
                 </div>
