fix css and adding credits on page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="app">
         <header>
             <div class="logo">PokèFilter</div>
+            <div class="credits">Dev with <img src="https://cdn.iconscout.com/icon/free/png-256/pokemon-pokeball-pikachu-thunder-electric-shock-32217.png"> by <a href="https://www.linkedin.com/in/michaeltorresdeveloper/">Michael</a> </div>
             <ul class="types">                    
                 <li>
                     <a href="#">
