fix uppercase input gotta error and some fix on css for screensizes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </ul>
             
             <div class="search">
-                <input id="pokemon-input-name" placeholder="Gotta Catch'em All.." type="text">
+                <input id="pokemon-input-name" placeholder="Catch'em All.." type="text">
                 <button>🔎</button>
             </div>
         </header>
