create a dropdown menu mobile only mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
         <header>
             <div class="logo">PokèFilter</div>
             <div class="credits">Dev with <img src="https://cdn.iconscout.com/icon/free/png-256/pokemon-pokeball-pikachu-thunder-electric-shock-32217.png"> by <a href="https://www.linkedin.com/in/michaeltorresdeveloper/">Michael</a> </div>
+            <div class="types-dropdown">
+                <select id="types-pokemon-drop" name="types">
+                    <option value="fire">FIRE 🔥</option>
+                    <option value="water">WATER 💧</option>
+                    <option value="normal">NORMAL </option>
+                    <option value="grass">GRASS 🌵</option>
+                    <option value="flying">FLYING 🦋</option>
+                    <option value="fighting">FIGHTING 🤺</option>
+                    <option value="poison">POISON ☠️</option>
+                    <option value="electric">ELECTRIC ⚡️</option>
+                    <option value="ground">GROUND 🕳️</option>
+                    <option value="rock">ROCK 🗿</option>
+                    <option value="psychic">PSYCHIC 🔮</option>
+                    <option value="ice"> ICE ❄️</option>
+                    <option value="bug">BUG 🐞</option>
+                    <option value="ghost">GHOST 👻</option>
+                    <option value="steel">STEEL 🧲 </option>
+                    <option value="dragon">DRAGON 🐉</option>
+                    <option value="dark">DARK ⚫️ </option>
+                    <option value="fairy">FAIRY 🧚‍♀️</option>
+
+                  </select>
+            </div>
             <ul class="types">                    
                 <li>
                     <a href="#">
