html input search and some fix css + .hide class create

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </ul>
             
             <div class="search">
-                <input id="pokemon-input-name" placeholder="Catch'em All.." type="text">
+                <input id="pokemon-input-name" placeholder="Catch'em All.." type="search">
                 <button>🔎</button>
             </div>
         </header>
