starting working on dark mode feature, button desing and change dom manipulation let -> const

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="app">
         <header>
             <div class="logo">PokèFilter</div>
-            <div class="credits">Dev with <img src="https://cdn.iconscout.com/icon/free/png-256/pokemon-pokeball-pikachu-thunder-electric-shock-32217.png"> by <a href="https://www.linkedin.com/in/michaeltorresdeveloper/">Michael</a> </div>
+            <div class="credits">Dev with <a href="https://pokeapi.co/"> <img src="./img/pika.webp"> </a> by <a class="underline-name" href="https://www.linkedin.com/in/michaeltorresdeveloper/"> Michael </a> </div>
             <div class="types-dropdown">
                 <select id="types-pokemon-drop" name="types">
                     <option value="fire">FIRE 🔥</option>
@@ -86,6 +86,9 @@
             <div class="search">
                 <input id="pokemon-input-name" placeholder="Catch'em All.." type="search">
                 <button>🔎</button>
+            </div>
+            <div class="dark-mode-button">
+                <button>🌙</button>
             </div>
         </header>
 
