fizing desing in responsive mode and desktop mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="app">
         <header>
-            <div class="logo">PokèFilter</div>
+            <div class="logo"> <a href="index.html">PokèFilter</a></div>
             <div class="credits">Dev with <a href="https://pokeapi.co/"> <img src="./img/pika.webp"> </a> by <a class="underline-name" href="https://www.linkedin.com/in/michaeltorresdeveloper/"> Michael </a> </div>
             <div class="types-dropdown">
                 <select id="types-pokemon-drop" name="types">
