--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="img/icon.ico/">
+    <link rel="apple-touch-icon" href="img/icon.ico/"/>
+    <title>PokèFilter</title>
 </head>
 <body>
     <div class="app">
