fix favicon path v3

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="img/x-icon" href="icon.ico">
-    <link rel="shortcut icon" href="icon.ico">
-    <link rel="apple-touch-icon" href="icon.ico"/>
+    <link rel="shortcut icon" href="/icon.ico">
+    <link rel="apple-touch-icon" href="/icon.ico"/>
     <title>PokèFilter</title>
 </head>
 <body>
