fix favicon path v3.1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="img/x-icon" href="icon.ico">
     <link rel="shortcut icon" href="/icon.ico">
     <link rel="apple-touch-icon" href="/icon.ico"/>
+    <link rel="apple-touch-icon" sizes="128x128" href="icon.ico">
     <title>PokèFilter</title>
 </head>
 <body>
