css design for new svg types RESPONSIVE

--- a/index.html
+++ b/index.html
@@ -73,26 +73,26 @@
             <a href="#">
               <img href="#" id="electric" src="img/icons/electric.svg" />
             </a>
-            <a>
+            <a href="#">
                 <img href="#" id="ground" src="img/icons/ground.svg" /> 
             </a>
-            <a><img href="#" id="rock" src="img/icons/rock.svg" /> 
+            <a href="#"><img href="#" id="rock" src="img/icons/rock.svg" /> 
             </a>
-            <a><img href="#" id="psychic" src="img/icons/psychic.svg" /> 
+            <a href="#"><img href="#" id="psychic" src="img/icons/psychic.svg" /> 
             </a>
-            <a><img href="#" id="ice" src="img/icons/ice.svg" /> 
+            <a href="#"><img href="#" id="ice" src="img/icons/ice.svg" /> 
             </a>
-            <a><img href="#" id="bug" src="img/icons/bug.svg" /> 
+            <a href="#"><img href="#" id="bug" src="img/icons/bug.svg" /> 
             </a>
-            <a><img href="#" id="ghost" src="img/icons/ghost.svg" /> 
+            <a href="#"><img href="#" id="ghost" src="img/icons/ghost.svg" /> 
             </a>
-            <a><img href="#" id="steel" src="img/icons/steel.svg" /> 
+            <a href="#"><img href="#" id="steel" src="img/icons/steel.svg" /> 
             </a>
-            <a><img href="#" id="dragon" src="img/icons/dragon.svg" />
+            <a href="#"><img href="#" id="dragon" src="img/icons/dragon.svg" />
              </a>
-            <a><img href="#" id="dark" src="img/icons/dark.svg" />
+            <a href="#"><img href="#" id="dark" src="img/icons/dark.svg" />
              </a>
-            <a><img href="#" id="fairy" src="img/icons/fairy.svg" />
+            <a href="#"><img href="#" id="fairy" src="img/icons/fairy.svg" />
              </a>
           </li>
         </ul>
